# Song-book

./: .gitmodules  CMakeLists.txt  Cmd.cpp  Cmd.h  Database.cpp  Database.h  LICENSE  LatexExport.cpp  LatexExport.h  Makefile  README.md  Song.cpp  Song.h  SongBookApp.cpp  SongBookApp.h  a.out  cmdapp.cpp  doxygen.conf  main.cpp  main2.cpp
.github/workflows/: cmake-multi-platform.yml
cli_app/: Makefile  config.json  database.json  default_config.json  songbook.out
cli_app/backups/: backup
cli_app/lib/cmd-app-utils/cpp/: Cmd.cpp  CommandServer.cpp
cli_app/lib/cmd-app-utils/h/: Cmd.h  Task.h  TaskBase.h
cli_app/src/: Database.cpp  Database.h  Song.h  SongBookApp.cpp  SongBookApp.h  SongDatabase.cpp  SongDatabase.h  cmdapp.cpp  main.cpp
cli_app/tasks/: tasks.h
cli_app/tasks/cpp/: AddTask.cpp  BackupTask.cpp  ExitTask.cpp  FetchTask.cpp  FindTask.cpp  GatherTask.cpp  HelpTask.cpp  LatexTask.cpp  ListTask.cpp  ModifyTask.cpp  PushTask.cpp  RemoveTask.cpp  SortTask.cpp  TestTask.cpp
cli_app/tasks/h/: AddTask.h  BackupTask.h  ExitTask.h  FetchTask.h  FindTask.h  GatherTask.h  HelpTask.h  LatexTask.h  ListTask.h  ModifyTask.h  PushTask.h  RemoveTask.h  SortTask.h  TestTask.h
cmdapp/: Makefile
cmdapp/lib/cmd-app-utils/: cmdapputils.h
cmdapp/lib/cmd-app-utils/cpp/: Cmd.cpp  CmdApp.cpp
cmdapp/lib/cmd-app-utils/h/: TaskBase.h
cmdapp/src/: Database.cpp  Song.cpp
cmdapp/tasks/cpp/: AddTask.cpp  ExitTask.cpp  FindTask.cpp  SortTask.cpp
cmdapp/tasks/h/: HelpTask.h  ListTask.h
django-server/: db.sqlite3  user_db.sqlite3
django-server/api/: models.py  serializers.py  urls.py  views.py
django-server/api/migrations/: 0001_initial.py  0002_song_owner_alter_song_id_alter_song_unique_together.py  0002_song_url.py  0003_remove_song_author_remove_song_name_remove_song_url_and_more.py  0004_song_url.py
django-server/server/: settings.py  urls.py
django-server/users/: db_router.py  models.py  routers.py  urls.py  views.py
django-server/users/migrations/: 0001_initial.py
env/: pyvenv.cfg
flutter_app/: pubspec.yaml
flutter_app/lib/: create.dart  login.dart  main.dart  register.dart  reset_password.dart  reset_password_request.dart  song.dart  update.dart  urls.dart
lib/cmd-app-utils/: cmdapputils.h
lib/cmd-app-utils/cpp/: CommandServer.cpp
lib/cmd-app-utils/h/: CommandServer.h  Task.h  TaskBase.h
lib/cmdapp/: cmdapp.h  cmdapplib.h
lib/cmdapp/cpp/: Cmd.cpp  Task.cpp  TaskBase.cpp
lib/cmdapp/h/: Cmd.h  CmdApp.h  Task.h  TaskBase.h
lib/window-app-utils/: CMakeLists.txt  Makefile  TaskBase.h  WTask.cpp  WTask.h  Window.cpp  Window.h  WindowServer.cpp  WindowServer.h  cmake_install.cmake
lib/window-app-utils/cpp/: WTask.cpp  Window.cpp  WindowServer.cpp
lib/window-app-utils/h/: TaskBase.h  WTask.h  Window.h  WindowServer.h
qt/songbook/: mainwindow.ui
server/server/: settings.py
src/: CMakeLists.txt  SongBookApp.cpp  SongBookApp.h  SongBookFormatter.cpp  SongBookFormatter.h  SongBookFormatter.hpp  SongBookUtils.cpp  SongBookUtils.h  SongDatabase.cpp  SongDatabase.h  SongEditorServer.cpp  SongEditorServer.hpp  delete  main.cpp
src/tasks/cpp/: CRUDTask.cpp  CollectionTask.cpp  DumpTask.cpp  FilterTask.cpp  FindTask.cpp  GatherTask.cpp  LatexTask.cpp  ListTask.cpp  SortTask.cpp
src/tasks/h/: CRUDTask.h  CollectionTask.h  DumpTask.h  ExitTask.h  FilterTask.h  FindTask.h  GatherTask.h  ListTask.h  PrintTask.h  SortTask.h
tasks/: tasks.h
tasks/cpp/: AddTask.cpp  BackupTask.cpp  CRUDTask.cpp  CollectionTask.cpp  ExitTask.cpp  FetchTask.cpp  FilterTask.cpp  FindTask.cpp  GatherTask.cpp  HelpTask.cpp  LatexTask.cpp  ListTask.cpp  ModifyTask.cpp  PushTask.cpp  RemoveTask.cpp  SortTask.cpp
tasks/h/: AddTask.h  BackupTask.h  CollectionTask.h  ExitTask.h  FetchTask.h  FilterTask.h  FindTask.h  GatherTask.h  HelpTask.h  LatexTask.h  ListTask.h  ModifyTask.h  PrintTask.h  PushTask.h  RemoveTask.h  SortTask.h
